SERVER-74632 Log aggregation results when validate commands fails due to a validation error

(cherry picked from commit 9b345f40ac74ea03eee77100e2244b9dc4bd6ccb)