src/mongo/db/commands/validate.cpp
@@ -35,6 +35,7 @@
 #include "mongo/db/catalog/collection_validation.h"
 #include "mongo/db/client.h"
 #include "mongo/db/commands.h"
+#include "mongo/db/dbdirectclient.h"
 #include "mongo/db/query/internal_plans.h"
 #include "mongo/db/server_options.h"
 #include "mongo/db/storage/record_store.h"
@@ -42,6 +43,7 @@
 #include "mongo/logv2/log.h"
 #include "mongo/util/fail_point.h"
 #include "mongo/util/scopeguard.h"
+#include "mongo/util/testing_proctor.h"
 
 #define MONGO_LOGV2_DEFAULT_COMPONENT ::mongo::logv2::LogComponent::kCommand
 
@@ -65,6 +67,77 @@ std::set<NamespaceString> _validationsInProgress;
 // namespace, as _validationsInProgress would indicate. This is signaled when a validation command
 // finishes on any namespace.
 stdx::condition_variable _validationNotifier;
+
+/**
+ * Creates an aggregation command with a $collStats pipeline that fetches 'storageStats' and
+ * 'count'.
+ */
+BSONObj makeCollStatsCommand(StringData collectionNameOnly) {
+    BSONArrayBuilder pipelineBuilder;
+    pipelineBuilder << BSON("$collStats"
+                            << BSON("storageStats" << BSONObj() << "count" << BSONObj()));
+    return BSON("aggregate" << collectionNameOnly << "pipeline" << pipelineBuilder.arr() << "cursor"
+                            << BSONObj());
+}
+
+/**
+ * $collStats never returns more than a single document. If that ever changes in future, validate
+ * must invariant so that the handling can be updated, but only invariant in testing environments,
+ * never invariant because of debug logging in production situations.
+ */
+void verifyCommandResponse(const BSONObj& collStatsResult) {
+    if (TestingProctor::instance().isEnabled()) {
+        invariant(
+            !collStatsResult.getObjectField("cursor").isEmpty() &&
+                !collStatsResult.getObjectField("cursor").getObjectField("firstBatch").isEmpty(),
+            str::stream() << "Expected a cursor to be present in the $collStats results: "
+                          << collStatsResult.toString());
+        invariant(collStatsResult.getObjectField("cursor").getIntField("id") == 0,
+                  str::stream() << "Expected cursor ID to be 0: " << collStatsResult.toString());
+    } else {
+        uassert(
+            7463202,
+            str::stream() << "Expected a cursor to be present in the $collStats results: "
+                          << collStatsResult.toString(),
+            !collStatsResult.getObjectField("cursor").isEmpty() &&
+                !collStatsResult.getObjectField("cursor").getObjectField("firstBatch").isEmpty());
+        uassert(7463203,
+                str::stream() << "Expected cursor ID to be 0: " << collStatsResult.toString(),
+                collStatsResult.getObjectField("cursor").getIntField("id") == 0);
+    }
+}
+
+/**
+ * Log the $collStats results for 'nss' to provide additional debug information for validation
+ * failures.
+ */
+void logCollStats(OperationContext* opCtx, const NamespaceString& nss) {
+    DBDirectClient client(opCtx);
+
+    BSONObj collStatsResult;
+    try {
+        // Run $collStats via aggregation.
+        // Any command errors will throw and be caught in the 'catch'.
+        client.runCommand(nss.dbName() /* DatabaseName */,
+                          makeCollStatsCommand(nss.coll()),
+                          collStatsResult /* command return results */);
+        verifyCommandResponse(collStatsResult);
+
+        LOGV2_OPTIONS(7463200,
+                      logv2::LogTruncation::Disabled,
+                      "Corrupt namespace $collStats results",
+                      "namespace"_attr = nss,
+                      "collStats"_attr =
+                          collStatsResult.getObjectField("cursor").getObjectField("firstBatch"));
+    } catch (const DBException& ex) {
+        // Catch the error so that the validate error does not get overwritten by the attempt to add
+        // debug logging.
+        LOGV2_WARNING(7463201,
+                      "Failed to fetch $collStats for validation error",
+                      "namespace"_attr = nss,
+                      "error"_attr = ex.toStatus());
+    }
+}
 
 }  // namespace
 
@@ -312,6 +385,7 @@ public:
             result.append("advice",
                           "A corrupt namespace has been detected. See "
                           "http://dochub.mongodb.org/core/data-recovery for recovery steps.");
+            logCollStats(opCtx, nss);
         }
 
         return true;
